# Engine2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  FileToRemove  vcpkg-configuration.json  vcpkg.json
include/: AppLayer.h  Application.h  Asserts.h  Camera.h  DrawData.h  EnginePrint.h  FileIO.h  FileLogger.h  InputMgr.h  Layer.h  LayerStack.h  MacroUtils.h  Profile.h  Timestep.h  Transform.h  Vertex.h  Window.h
include/Events/: ApplicationEvents.h  EventDispatcher.h  Events.h  InputEvents.h  MouseEvents.h  WindowEvents.h
include/Lua/: Lua.h  LuaState.h
include/OpenGL/: OpenGLBuffers.h  OpenGLShader.h  OpenGLTexture.h
res/lua/: main.lua
res/shaders/: basic_fragment.frag  basic_vertex.vert
src/: AppLayer.cpp  Application.cpp  Camera.cpp  FileIO.cpp  FileLogger.cpp  InputMgr.cpp  LayerStack.cpp  Profile.cpp  Timestep.cpp  Transform.cpp  Window.cpp  __Application.cppo  main.cpp
src/OpenGL/: OpenGLBuffers.cpp  OpenGLShader.cpp  OpenGLTexture.cpp
